chore(coverage): add coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ before_script:
 script:
   - "npm run test"
 after_success:
-  - "npm run coverage"
+  - "npm run coverage:codecov"
+  - "npm run coverage:coveralls"
