--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:dist": "webpack --progress --colors --set-env-NODE_ENV=development",
     "build:prod": "webpack --progress --colors --set-env-NODE_ENV=production",
     "build": "npm run build:dist & npm run build:prod",
-    "coverage": "cat ./coverage/lcov.info | node_modules/.bin/codecov",
+    "coverage:codecov": "cat ./coverage/lcov.info | node_modules/.bin/codecov",
+    "coverage:coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "test": "karma start karma.conf.js"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "babel-core": "^5.0.0",
     "babel-loader": "^5.3.2",
     "codecov.io": "^0.1.6",
+    "coveralls": "^2.11.4",
     "isparta": "^4.0.0",
     "isparta-loader": "1.0.0",
     "jasmine-core": "^2.3.4",
