--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run build:dist & npm run build:prod",
     "coverage:codecov": "cat ./coverage/lcov.info | node_modules/.bin/codecov",
     "coverage:coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "coverage:codacy": "cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage",
     "test": "karma start karma.conf.js"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "babel": "^5.8.3",
     "babel-core": "^5.0.0",
     "babel-loader": "^5.3.2",
+    "codacy-coverage": "^1.1.3",
     "codecov.io": "^0.1.6",
     "coveralls": "^2.11.4",
     "isparta": "^4.0.0",
